# bff

./: .gitignore  Cargo.toml  LICENSE  README.org
src/: lib.rs  main.rs
src/behavior/: cache.rs  checksum.rs  mod.rs  search.rs  strings.rs  tree.rs
src/cli/: arg_parser.rs  error.rs  mod.rs
src/config/: config.rs  config_reader.rs  mod.rs  schema.rs
src/parser/: alias_expansion.rs  mod.rs
tests/: soft.rs  stress.rs  strict.rs
