[package]
name = "bff"
description = "A CLI tool for searching file trees"
version = "0.7.3"
license = "MIT"
edition = "2024"

[dependencies]
ascii_tree = "0.1.1"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.8"
hex = "0.4.3"
itertools = "0.14.0"
jwalk = "0.8.1"
log = "0.4.27"
main_error = "0.1.2"
once_cell = "1.21.3"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
toml = "0.9.2"

[dev-dependencies]
rand = "0.8"
